--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,8 +27,8 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="list-group">
-          <% post.forEach((post) => { %>
-            <a href="/post/<%= post.id %>" class="list-group-item">
+          <% posts.forEach((post) => { %>
+            <a href='/post/<%= post.id %>' class="list-group-item">
             <h4 class="list-group-item-heading"><%= post.title %></h4>
             <p class="list-group-item-text"><%= post.author %></p>
             </a>
