--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,8 +1,8 @@
 <div class='header clearfix'>
   <nav>
     <ul class='nav nav-pills pull-right'>
-      <li role='presentation'<a href='/'>Home</a></li>
+      <li role='presentation'><a href='/'>Home</a></li>
     </ul>
-    <h3 class='text-muted'>RayKayy Blog</h3>
+    <h3 class='text-muted'>RayKayy's Blog</h3>
   </nav>
 </div>
